# MatrixCPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
cmake/: CompileFlags.cmake
include/: buffer.hpp  double_compare.hpp  matrix.hpp  matrix_chain.hpp  proxyrow.hpp
src/: CMakeLists.txt  double_compare.cpp  main.cpp  matrix_chain_main.cpp
tests/: CMakeLists.txt
tests/e2e/: answer.out  end_to_end_test.sh  matrix_generate.py  test_01.in  test_02.in
tests/e2e_chain/: end_to_end_test_chain.sh  test_01.in  test_01.out  test_02.out  test_03.out  test_04.in  test_04.out  test_05.in  test_05.out  test_06.in  test_06.out  verify_chain_output.py
tests/e2e_det/: answer.out
tests/unit/: controllable.hpp  unit_test.cpp
